build/log/idf_py_stdout_output_5879
[1/12] Building C object esp-idf/common_nvs/CMakeFiles/__idf_common_nvs.dir/common_nvs.c.obj
../components/common_nvs/common_nvs.c: In function 'init_info_wifi':
../components/common_nvs/common_nvs.c:18:19: warning: unused variable 'err_ssid' [-Wunused-variable]
   18 |         esp_err_t err_ssid = nvs_set_str(wifi, "SSID", "");
      |                   ^~~~~~~~
../components/common_nvs/common_nvs.c:17:19: warning: unused variable 'err_pass' [-Wunused-variable]
   17 |         esp_err_t err_pass = nvs_set_str(wifi, "PASSWORD", "");
      |                   ^~~~~~~~
../components/common_nvs/common_nvs.c: In function 'init_info_last_id_payload':
../components/common_nvs/common_nvs.c:41:19: warning: unused variable 'err_id' [-Wunused-variable]
   41 |         esp_err_t err_id = nvs_set_str(wifi, "ID_OLD", "");
      |                   ^~~~~~
../components/common_nvs/common_nvs.c: In function 'get_last_id_payload':
../components/common_nvs/common_nvs.c:60:15: warning: unused variable 'err_open' [-Wunused-variable]
   60 |     esp_err_t err_open = nvs_open("ID", NVS_READWRITE, &id);
      |               ^~~~~~~~
[2/12] Performing build step for 'bootloader'
[1/1] cd /home/ynghia/CODE/IDF/vinfast/build/bootloader/esp-idf/esptool_py && /home/ynghia/.espressif/python_env/idf5.1_py3.8_env/bin/python /home/ynghia/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/ynghia/CODE/IDF/vinfast/build/bootloader/bootloader.bin
Bootloader binary size 0x6870 bytes. 0x790 bytes (7%) free.
[3/10] Linking C static library esp-idf/common_nvs/libcommon_nvs.a
[4/10] Building C object esp-idf/app_handle_query/CMakeFiles/__idf_app_handle_query.dir/app_handle_query.c.obj
FAILED: esp-idf/app_handle_query/CMakeFiles/__idf_app_handle_query.dir/app_handle_query.c.obj 
/home/ynghia/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.4-52-g978d574e5e-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -Iconfig -I../components/app_handle_query/include -I/home/ynghia/esp/esp-idf/components/newlib/platform_include -I/home/ynghia/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/ynghia/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/ynghia/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/ynghia/esp/esp-idf/components/freertos/esp_additions/include -I/home/ynghia/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/ynghia/esp/esp-idf/components/esp_hw_support/include -I/home/ynghia/esp/esp-idf/components/esp_hw_support/include/soc -I/home/ynghia/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/ynghia/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/ynghia/esp/esp-idf/components/heap/include -I/home/ynghia/esp/esp-idf/components/log/include -I/home/ynghia/esp/esp-idf/components/soc/include -I/home/ynghia/esp/esp-idf/components/soc/esp32 -I/home/ynghia/esp/esp-idf/components/soc/esp32/include -I/home/ynghia/esp/esp-idf/components/hal/esp32/include -I/home/ynghia/esp/esp-idf/components/hal/include -I/home/ynghia/esp/esp-idf/components/hal/platform_port/include -I/home/ynghia/esp/esp-idf/components/esp_rom/include -I/home/ynghia/esp/esp-idf/components/esp_rom/include/esp32 -I/home/ynghia/esp/esp-idf/components/esp_rom/esp32 -I/home/ynghia/esp/esp-idf/components/esp_common/include -I/home/ynghia/esp/esp-idf/components/esp_system/include -I/home/ynghia/esp/esp-idf/components/esp_system/port/soc -I/home/ynghia/esp/esp-idf/components/esp_system/port/include/private -I/home/ynghia/esp/esp-idf/components/xtensa/include -I/home/ynghia/esp/esp-idf/components/xtensa/esp32/include -I/home/ynghia/esp/esp-idf/components/lwip/include -I/home/ynghia/esp/esp-idf/components/lwip/include/apps -I/home/ynghia/esp/esp-idf/components/lwip/include/apps/sntp -I/home/ynghia/esp/esp-idf/components/lwip/lwip/src/include -I/home/ynghia/esp/esp-idf/components/lwip/port/include -I/home/ynghia/esp/esp-idf/components/lwip/port/freertos/include -I/home/ynghia/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/ynghia/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/ynghia/esp/esp-idf/components/json/cJSON -I/home/ynghia/esp/esp-idf/components/driver/include -I/home/ynghia/esp/esp-idf/components/driver/deprecated -I/home/ynghia/esp/esp-idf/components/driver/analog_comparator/include -I/home/ynghia/esp/esp-idf/components/driver/dac/include -I/home/ynghia/esp/esp-idf/components/driver/gpio/include -I/home/ynghia/esp/esp-idf/components/driver/gptimer/include -I/home/ynghia/esp/esp-idf/components/driver/i2c/include -I/home/ynghia/esp/esp-idf/components/driver/i2s/include -I/home/ynghia/esp/esp-idf/components/driver/ledc/include -I/home/ynghia/esp/esp-idf/components/driver/mcpwm/include -I/home/ynghia/esp/esp-idf/components/driver/parlio/include -I/home/ynghia/esp/esp-idf/components/driver/pcnt/include -I/home/ynghia/esp/esp-idf/components/driver/rmt/include -I/home/ynghia/esp/esp-idf/components/driver/sdio_slave/include -I/home/ynghia/esp/esp-idf/components/driver/sdmmc/include -I/home/ynghia/esp/esp-idf/components/driver/sigma_delta/include -I/home/ynghia/esp/esp-idf/components/driver/spi/include -I/home/ynghia/esp/esp-idf/components/driver/temperature_sensor/include -I/home/ynghia/esp/esp-idf/components/driver/touch_sensor/include -I/home/ynghia/esp/esp-idf/components/driver/twai/include -I/home/ynghia/esp/esp-idf/components/driver/uart/include -I/home/ynghia/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/ynghia/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/ynghia/esp/esp-idf/components/esp_pm/include -I/home/ynghia/esp/esp-idf/components/esp_ringbuf/include -I../components/common_nvs/include -I/home/ynghia/esp/esp-idf/components/nvs_flash/include -I/home/ynghia/esp/esp-idf/components/esp_partition/include -I/home/ynghia/esp/esp-idf/components/spi_flash/include -I../components/app_request_https/include -I../components/driver_enable_output/include -mlongcalls -Wno-frame-address    -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/ynghia/CODE/IDF/vinfast=. -fmacro-prefix-map=/home/ynghia/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/app_handle_query/CMakeFiles/__idf_app_handle_query.dir/app_handle_query.c.obj -MF esp-idf/app_handle_query/CMakeFiles/__idf_app_handle_query.dir/app_handle_query.c.obj.d -o esp-idf/app_handle_query/CMakeFiles/__idf_app_handle_query.dir/app_handle_query.c.obj   -c ../components/app_handle_query/app_handle_query.c
../components/app_handle_query/app_handle_query.c: In function 'handler_json_query':
../components/app_handle_query/app_handle_query.c:17:38: error: initializer element is not constant
   17 |     static int last_transaction_id = get_last_id_payload();
      |                                      ^~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
